--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
       <!-- All team -->
       <section class="all-team">
-        <div class="container-team container">
+        <div class="container">
           <h2 class="our-team">Our Team</h2>
           <ul class="list-team list">
             <li class="info-team list">
@@ -155,8 +155,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="name-team">Mark Guerrero</h3>
-              <p class="profession-team">Product Designer</p>
+              <div class="team-container">
+                <h3 class="name-team">Mark Guerrero</h3>
+                <p class="profession-team">Product Designer</p>
+              </div>
             </li>
             <li class="info-team list">
               <img
@@ -166,8 +168,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="name-team">Tom Ford</h3>
-              <p class="profession-team">Frontend Developer</p>
+              <div class="team-container">
+                <h3 class="name-team">Tom Ford</h3>
+                <p class="profession-team">Frontend Developer</p>
+              </div>
             </li>
             <li class="info-team list">
               <img
@@ -177,8 +181,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="name-team">Camila Garcia</h3>
-              <p class="profession-team">Marketing</p>
+              <div class="team-container">
+                <h3 class="name-team">Camila Garcia</h3>
+                <p class="profession-team">Marketing</p>
+              </div>
             </li>
             <li class="info-team list">
               <img
@@ -188,8 +194,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="name-team">Daniel Wilson</h3>
-              <p class="profession-team">UI Designer</p>
+              <div class="team-container">
+                <h3 class="name-team">Daniel Wilson</h3>
+                <p class="profession-team">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
