--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="link-logo link link-logo-footer"
+        <a href="./index.html" class="link-logo link logo-portfolio"
           >Web<span class="web-footer">Studio</span></a
         >
         <p class="footer-text">
