--- a/portfolio.html
+++ b/portfolio.html
@@ -226,7 +226,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="link-logo link"
+        <a href="./index.html" class="link-logo link logo-portfolio"
           >Web<span class="web-footer">Studio</span></a
         >
         <p class="footer-text">
